@@ -1,5 +1,10 @@
 2000-07-28  Eric Melski  <ericm@ajubasolutions.com>
 
+	* unix/tkUnixButton.c (TkpDisplayButton): Added bits to change
+	the indicator color when radio-/check-buttons are disabled.  This
+	reduces the visual incongruity when a group of these controls are
+	disabled together.
+
 	* win/tkWinMenu.c (ReconfigureWindowsMenu): Added MF_GRAYED bit
 	for disabled menu entries, to ensure that those which are drawn by
 	the system are shown grayed (such as entries on menubars) [Bug: 4372].
